add_executable(atomic_unittest Atomic_unittest)
target_link_libraries(atomic_unittest muduo_base)

add_executable(blockingqueue_test BlockingQueue_test)
target_link_libraries(blockingqueue_test muduo_base)

add_executable(blockingqueue_bench BlockingQueue_bench)
target_link_libraries(blockingqueue_bench muduo_base)

add_executable(boundblockingqueue_test BoundBlockingQueue_test)
target_link_libraries(boundblockingqueue_test muduo_base)

add_executable(exception_test Exception_test)
target_link_libraries(exception_test muduo_base)

add_executable(mutex_test Mutex_test)
target_link_libraries(mutex_test muduo_base)

add_executable(threadpool_test ThreadPool_test)
target_link_libraries(threadpool_test muduo_base)

add_executable(thread_unittest Thread_unittest)
target_link_libraries(thread_unittest muduo_base)

add_executable(timestamp_unittest Timestamp_unittest)
target_link_libraries(timestamp_unittest muduo_base)

add_executable(singleton_test Singleton_test)
target_link_libraries(singleton_test muduo_base)
